infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ds-covid
  labels:
    app: ds-covid
    env: production
